<resources>
    <string name="app_name">Proyecto DAM_1</string>
    <string name="txt_contraseña">Ingrese contraseña</string>
    <string name="direccion">Ingrese dirección</string>
    <string name="Celular">Ingrese celular</string>
    <string name="CodCarrera">Elija la carrera</string>
    <string name="Edad">Ingrese edad</string>
    <string name="txt_codigo">Ingrese su codigo</string>

    <string name="bt_ingresar">INGRESAR</string>
    <string name="bt_registrar">Registrar</string>

    <string name="nueva_cuenta">REGISTRO DE ALUMNO</string>

    <string name="boton_cancelar">CANCELAR</string>
    <string name="registrarAlu">REGISTRA ALUMNO</string>
    <string name="registraProfe">REGISTRA PROFESOR</string>
    <string name="registraAdmini">REGISTRA ADMINISTRADOR</string>
    <string name="b_p_alumno">ALUMNO INGRESO</string>
    <string name="b_p_profesor">PROFESOR INGRESO</string>
    <string name="b_p_administrador">ADMIN INGRESO</string>
    <string name="b_a_cancelar">REGRESAR</string>
    <string name="TV_Al_Logueo">ALUMNO LOGUEO</string>
    <string name="TV_Pro_Logueo">PROFESOR LOGUEO</string>
    <string name="TV_Admin_Logueo">ADMIN LOGUEO</string>


    <string-array name="comboEstado">
        <item>ACTIVO</item>
        <item>INACTIVO</item>
        <item>RETIRADO</item>
        <item>SUSPENDIDO</item>
    </string-array>


    <string-array name="combocodCarrera">
        <item>Computacion e informatica</item>
        <item>Contabilidad</item>
        <item>Seguridad Industrial</item>
        <item>Maniquiure</item>
    </string-array>

    //Fragment profesor
    <string name="nueva_cuenta_pro">REGISTRO DE PROFESOR</string>
    <string name="codigo_profesor">Código profesor</string>
    <string name="nombre_profesor">Ingrese nombre</string>
    <string name="apellido_profesor">Ingrese apellido</string>






    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">PRESIONA UNO DE LOS BOTONES PARA AGREGAR ALUMNO / PROFESOR</string>


</resources>