<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Fragment_Admin_teacher"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nueva_cuenta_pro"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginLeft="60dp"
            />


        <EditText
            android:id="@+id/txt_Profe_fra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/codigo_profesor"
            android:inputType="textPersonName"


            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_Nombre_pro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/nombre_profesor"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_Apellido_pro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/apellido_profesor"
            android:inputType="textPersonName"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/txt_Celular_pro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/Celular"
            android:inputType="number"
            android:textSize="16sp" />


        <Spinner
            android:id="@+id/sp_estado"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

        <EditText
            android:id="@+id/txt_Edad_pro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/Edad"
            android:inputType="textPersonName"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/txt_direccion_pro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/direccion"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_Contraseña_pro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:hint="@string/txt_contraseña"
            android:inputType="textPersonName"
            android:textSize="16sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            >

            <Button
                android:id="@+id/btn_registrar_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_registrar"
                android:textSize="14sp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"

                />

            <Button
                android:id="@+id/btn_Cancelar_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_cancelar"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                />
        </LinearLayout>


        </LinearLayout>
    </ScrollView>
</FrameLayout>