<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLogeo">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_Ad_return"
        app:srcCompat="@drawable/rb35dd218be3445410ec3e170dace3a81" />

    <EditText
        android:id="@+id/txt_ad_codigo"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:hint="@string/txt_codigo"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_ad_contraseña"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/txt_contraseña"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_Ad_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ad_codigo" />

    <Button
        android:id="@+id/bt_Ad_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/b_a_cancelar"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ad_contraseña" />

    <Button
        android:id="@+id/bt_Ad_Ingreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/bt_ingresar"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ad_contraseña"
        app:layout_constraintVertical_bias="0.503" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/TV_Admin_Logueo"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_ad_codigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>