<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdministradorAC">

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="116dp"
        android:layout_marginBottom="35dp"
        android:text="@string/registraProfe"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginBottom="28dp"
        android:text="@string/registrarAlu"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginBottom="98dp"
        android:text="@string/registraAdmini"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rb35dd218be3445410ec3e170dace3a81" />
</androidx.constraintlayout.widget.ConstraintLayout>